# detectron2

./: manual_setup.py  pyproject.toml  setup.py
detectron2/evaluation/: fast_eval_api.py
